Inoreader: prevent portrait-mode videos from being too tall for the window

--- a/styles/inoreader.user.css
+++ b/styles/inoreader.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Inoreader
 @namespace      https://aldaviva.com/userstyles/
-@version        0.1.23
+@version        0.1.24
 @description    Removed clutter. Made videos muted, loop, and autoplay. Made certain thumbnails appear only on hover. Removed dead zone between articles in Column View.
 @author         Ben Hutchison <ben@aldaviva.com> (https://aldaviva.com)
 @license        MIT
@@ -65,6 +65,7 @@
         max-width: 100% !important;
         height: auto;
         opacity: 1;
+        max-height: calc(100vh - 249px);
     }
 
     /* In Column View, all thumbnails should be opaque by default to prevent the placeholder image from showing through */
